# gkrellmbups

./: INSTALL  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
config/: Makefile.in  mkinstalldirs
src/: Makefile.am  Makefile.in  chart.c  chart.h  gkrellmbups.c  gkrellmbups.h  prefs.c  prefs.h  ups_connect.c  ups_connect.h  version.h  version.h.in
